--- a/serverless.yaml
+++ b/serverless.yaml
@@ -7,6 +7,14 @@ provider:
   name: aws
   lambdaHashingVersion: 20201221
 
+  environment:
+    REQUESTS_CA_BUNDLE: python/cacert.pem
+    SSL_CERT_FILE: python/cacert.pem
+    NODE_EXTRA_CA_CERTS: nodejs/node_modules/cacert.pem   
+
+  layers:
+    - { Ref: CustomCALambdaLayer }
+
 package:
   patterns:
     - layer
@@ -16,6 +24,7 @@ layers:
   customCA:
     path: layer
     description: A Layer to add my custom CA
+
     compatibleRuntimes:
       - python3.6
       - nodejs14.x
@@ -24,16 +33,7 @@ functions:
   testPython:
     handler: lambda_function.lambda_handler
     runtime: python3.6
-    environment:
-      REQUESTS_CA_BUNDLE: python/cert.pem
-      SSL_CERT_FILE: python/cert.pem
-    layers:
-      - { Ref: CustomCALambdaLayer }
 
   testNode:
     handler: lambda_function.lambda_handler
     runtime: nodejs14.x
-    environment:
-      NODE_EXTRA_CA_CERTS: nodejs/cert.pem
-    layers:
-      - { Ref: CustomCALambdaLayer }
